--- a/admin-panel/src/assets/i18n/ar.json
+++ b/admin-panel/src/assets/i18n/ar.json
@@ -14,7 +14,8 @@
     "faq": "الأسئلة الشائعة",
     "leads": "الرسائل",
     "media": "المكتبة",
-    "settings": "الإعدادات"
+    "settings": "الإعدادات",
+    "profile": "الملف الشخصي"
   },
   
   "app": {
@@ -43,29 +44,49 @@
     "faq": "الأسئلة الشائعة",
     "leads": "الرسائل",
     "settings": "الإعدادات",
-    "media": "المكتبة"
+    "media": "المكتبة",
+    "profile": "الملف الشخصي"
   },
   
   "dashboard": {
     "title": "لوحة التحكم",
     "welcome": "مرحباً بعودتك",
+    "subtitle": "إليك ما يحدث في منصتك اليوم",
     "totalLeads": "إجمالي الرسائل",
     "newLeads": "رسائل جديدة",
     "processedLeads": "رسائل معالجة",
-    "totalServices": "الخدمات النشطة",
+    "activeServices": "الخدمات النشطة",
     "testimonials": "آراء العملاء",
     "recentLeads": "أحدث الرسائل",
+    "latestInquiries": "أحدث استفسارات العملاء",
     "quickStats": "إحصائيات سريعة",
+    "quickActions": "إجراءات سريعة",
     "recentActivity": "النشاط الأخير",
     "viewAll": "عرض الكل",
     "noLeads": "لا توجد رسائل بعد",
+    "noLeadsDesc": "ستظهر الرسائل هنا عندما يتواصل العملاء معك",
     "noActivity": "لا يوجد نشاط حديث",
     "thisMonth": "هذا الشهر",
+    "allTime": "كل الوقت",
+    "new": "جديد",
     "unread": "غير مقروءة",
+    "published": "منشور",
+    "reviews": "التقييمات",
+    "pricingPlans": "الأسعار",
+    "features": "المميزات",
+    "faq": "الأسئلة",
+    "media": "الوسائط",
+    "manageServices": "الخدمات",
     "totalPricingPlans": "خطط الأسعار",
     "totalFeatures": "المميزات",
     "totalFAQ": "الأسئلة الشائعة",
-    "totalMedia": "ملفات الوسائط"
+    "totalMedia": "ملفات الوسائط",
+    "platform": "المنصة",
+    "lastUpdate": "آخر تحديث",
+    "status": "الحالة",
+    "security": "الأمان",
+    "operational": "تعمل بشكل طبيعي",
+    "secured": "محمي"
   },
   
   "services": {
@@ -216,6 +237,35 @@
     "uploadDate": "تاريخ الرفع",
     "altText": "النص البديل",
     "mediaTitle": "العنوان"
+  },
+  
+  "profile": {
+    "title": "إعدادات الملف الشخصي",
+    "subtitle": "إدارة معلومات حسابك والأمان",
+    "updateProfile": "تحديث معلومات الملف الشخصي",
+    "changePassword": "تغيير كلمة المرور",
+    "name": "الاسم الكامل",
+    "namePlaceholder": "أدخل اسمك الكامل",
+    "email": "البريد الإلكتروني",
+    "emailPlaceholder": "أدخل بريدك الإلكتروني",
+    "avatar": "رابط الصورة الشخصية",
+    "avatarPlaceholder": "https://example.com/avatar.jpg",
+    "avatarHint": "أدخل رابط صورتك الشخصية",
+    "optional": "اختياري",
+    "currentPassword": "كلمة المرور الحالية",
+    "currentPasswordPlaceholder": "أدخل كلمة المرور الحالية",
+    "newPassword": "كلمة المرور الجديدة",
+    "newPasswordPlaceholder": "أدخل كلمة المرور الجديدة",
+    "confirmPassword": "تأكيد كلمة المرور الجديدة",
+    "confirmPasswordPlaceholder": "أكد كلمة المرور الجديدة",
+    "passwordHint": "يجب أن تكون كلمة المرور 8 أحرف على الأقل",
+    "saveProfile": "حفظ الملف الشخصي",
+    "updatePassword": "تحديث كلمة المرور",
+    "securityTips": "نصائح الأمان",
+    "tip1": "استخدم كلمة مرور قوية من 8 أحرف على الأقل",
+    "tip2": "لا تشارك كلمة المرور مع أي شخص",
+    "tip3": "غيّر كلمة المرور بانتظام",
+    "tip4": "استخدم كلمات مرور مختلفة لحسابات مختلفة"
   },
   
   "common": {
