--- a/admin-panel/src/assets/i18n/ar.json
+++ b/admin-panel/src/assets/i18n/ar.json
@@ -141,15 +141,38 @@
   
   "features": {
     "title": "المميزات",
-    "add": "إضافة ميزة",
-    "edit": "تعديل ميزة",
-    "delete": "حذف ميزة",
-    "name": "اسم الميزة",
+    "subtitle": "إدارة مميزات وفوائد المنصة",
+    "addNew": "إضافة ميزة جديدة",
+    "addFeature": "إضافة ميزة",
+    "addFirst": "أضف أول ميزة",
+    "editFeature": "تعديل ميزة",
+    "deleteFeature": "حذف ميزة",
+    "featureTitle": "عنوان الميزة",
+    "titlePlaceholder": "مثال: أداء سريع",
     "description": "الوصف",
+    "descriptionPlaceholder": "اشرح هذه الميزة بالتفصيل",
     "icon": "الأيقونة",
-    "order": "الترتيب",
-    "active": "نشط"
+    "iconPlaceholder": "اختر أيقونة",
+    "order": "ترتيب العرض",
+    "orderHelp": "الأرقام الأقل تظهر أولاً",
+    "active": "نشط",
+    "totalFeatures": "إجمالي المميزات",
+    "activeFeatures": "المميزات النشطة",
+    "inactiveFeatures": "المميزات غير النشطة",
+    "noFeatures": "لا توجد مميزات بعد",
+    "noFeaturesDesc": "أنشئ أول ميزة لعرض فوائد منصتك",
+    "titleRequired": "عنوان الميزة مطلوب",
+    "descriptionRequired": "وصف الميزة مطلوب",
+    "createSuccess": "تم إنشاء الميزة بنجاح",
+    "createError": "فشل إنشاء الميزة",
+    "updateSuccess": "تم تحديث الميزة بنجاح",
+    "updateError": "فشل تحديث الميزة",
+    "deleteSuccess": "تم حذف الميزة بنجاح",
+    "deleteError": "فشل حذف الميزة",
+    "deleteConfirm": "هل أنت متأكد من حذف '{{title}}'؟",
+    "toggleError": "فشل تبديل حالة الميزة"
   },
+
   
   "testimonials": {
     "title": "آراء العملاء",
@@ -275,6 +298,8 @@
     "delete": "حذف",
     "edit": "تعديل",
     "add": "إضافة",
+    "create": "إنشاء",
+    "update": "تحديث",
     "search": "بحث",
     "filter": "تصفية",
     "actions": "الإجراءات",
@@ -293,8 +318,11 @@
     "updateSuccess": "تم التحديث بنجاح",
     "createSuccess": "تم الإنشاء بنجاح",
     "language": "اللغة",
+    "english": "الإنجليزية",
+    "arabic": "العربية",
     "all": "الكل",
     "or": "أو",
+    "order": "الترتيب",
     "active": "نشط",
     "inactive": "غير نشط",
     "toggleStatus": "تبديل الحالة",
