--- a/admin-panel/src/assets/i18n/en.json
+++ b/admin-panel/src/assets/i18n/en.json
@@ -141,14 +141,33 @@
   
   "features": {
     "title": "Features",
-    "add": "Add Feature",
-    "edit": "Edit Feature",
-    "delete": "Delete Feature",
-    "name": "Feature Name",
+    "subtitle": "Manage platform features and benefits",
+    "addNew": "Add New Feature",
+    "addFeature": "Add Feature",
+    "editFeature": "Edit Feature",
+    "addFirst": "Add Your First Feature",
+    "featureTitle": "Feature Title",
+    "titlePlaceholder": "e.g., Fast Performance",
     "description": "Description",
+    "descriptionPlaceholder": "Describe this feature in detail",
     "icon": "Icon",
-    "order": "Order",
-    "active": "Active"
+    "iconPlaceholder": "Select an icon",
+    "orderHelp": "Lower numbers appear first",
+    "totalFeatures": "Total Features",
+    "activeFeatures": "Active Features",
+    "inactiveFeatures": "Inactive Features",
+    "noFeatures": "No Features Yet",
+    "noFeaturesDesc": "Create your first feature to showcase your platform's capabilities",
+    "titleRequired": "Feature title is required",
+    "descriptionRequired": "Feature description is required",
+    "createSuccess": "Feature created successfully",
+    "createError": "Failed to create feature",
+    "updateSuccess": "Feature updated successfully",
+    "updateError": "Failed to update feature",
+    "deleteSuccess": "Feature deleted successfully",
+    "deleteError": "Failed to delete feature",
+    "deleteConfirm": "Are you sure you want to delete '{{title}}'?",
+    "toggleError": "Failed to toggle feature status"
   },
   
   "testimonials": {
@@ -275,6 +294,8 @@
     "delete": "Delete",
     "edit": "Edit",
     "add": "Add",
+    "create": "Create",
+    "update": "Update",
     "search": "Search",
     "filter": "Filter",
     "actions": "Actions",
@@ -293,8 +314,11 @@
     "updateSuccess": "Updated successfully",
     "createSuccess": "Created successfully",
     "language": "Language",
+    "english": "English",
+    "arabic": "Arabic",
     "all": "All",
     "or": "or",
+    "order": "Order",
     "active": "Active",
     "inactive": "Inactive",
     "toggleStatus": "Toggle Status",
