Prompt: "تاكدلي انه ما في مشاكل" <thinking> Tool C...

--- a/admin-panel/src/assets/i18n/ar.json
+++ b/admin-panel/src/assets/i18n/ar.json
@@ -115,7 +115,10 @@
   "pricing": {
     "title": "خطط الأسعار",
     "subtitle": "إدارة خطط الأسعار والباقات",
+    "management": "إدارة خطط الأسعار",
+    "manageAcross": "إدارة خطط الأسعار عبر أنواع الخدمات والمستويات المختلفة",
     "add": "إضافة خطة",
+    "addNew": "إضافة خطة جديدة",
     "edit": "تعديل خطة",
     "delete": "حذف خطة",
     "name": "اسم الخطة",
@@ -127,16 +130,120 @@
     "features": "المميزات",
     "featurePlaceholder": "أدخل ميزة",
     "addFeature": "إضافة ميزة",
+    "addAnotherFeature": "إضافة ميزة أخرى",
     "popular": "الأكثر شعبية",
+    "mostPopular": "الأكثر شعبية",
     "markPopular": "تعليم كالأكثر شعبية",
     "markActive": "تعليم كنشط",
     "order": "الترتيب",
+    "displayOrder": "ترتيب العرض",
     "active": "نشط",
+    "inactive": "غير نشط",
     "month": "شهر",
     "year": "سنة",
+    "perMonth": "/شهر",
+    "perYear": "/سنة",
+    "monthly": "شهري",
+    "yearly": "سنوي",
     "save": "وفر سنوياً",
+    "saveWith": "وفر",
+    "withYearly": "مع الفوترة السنوية",
     "noPricing": "لا توجد خطط أسعار بعد",
-    "noPricingDesc": "أنشئ أول خطة أسعار للبدء"
+    "noPricingDesc": "أنشئ أول خطة أسعار للبدء",
+    "noPricingFound": "لم يتم العثور على خطط أسعار",
+    "noMatch": "لا توجد خطط تطابق الفلاتر الحالية. حاول تعديل معايير البحث.",
+    "getStarted": "ابدأ بإنشاء أول خطة أسعار لتقديمها لعملائك.",
+    "websitePlans": "خطط المواقع",
+    "appPlans": "خطط التطبيقات",
+    "packagePlans": "خطط الباقات",
+    "totalPlans": "إجمالي الخطط",
+    "showing": "عرض",
+    "of": "من",
+    "plans": "خطة",
+    "activateAll": "تفعيل الكل",
+    "deactivateAll": "إلغاء تفعيل الكل",
+    "serviceType": "نوع الخدمة",
+    "website": "موقع",
+    "app": "تطبيق",
+    "package": "باقة",
+    "websiteDev": "تطوير المواقع",
+    "appDev": "تطوير التطبيقات",
+    "bothPackage": "باقة موقع + تطبيق",
+    "tier": "المستوى",
+    "planTier": "مستوى الخطة",
+    "basic": "أساسي",
+    "professional": "احترافي",
+    "enterprise": "مؤسسي",
+    "searchPlaceholder": "البحث بالاسم أو الوصف...",
+    "clearSearch": "مسح البحث",
+    "clearFilters": "مسح الفلاتر",
+    "clearAllFilters": "مسح جميع الفلاتر",
+    "createNew": "إنشاء خطة أسعار جديدة",
+    "editPlan": "تعديل خطة الأسعار",
+    "basicInfo": "المعلومات الأساسية",
+    "pricingDetails": "تفاصيل الأسعار",
+    "planFeatures": "مميزات الخطة",
+    "additionalOptions": "خيارات إضافية",
+    "planSettings": "إعدادات الخطة",
+    "markPopularChoice": "تعليم كالخيار الأكثر شعبية",
+    "visibleToCustomers": "نشط (مرئي للعملاء)",
+    "createPlan": "إنشاء خطة",
+    "updatePlan": "تحديث خطة",
+    "savingPlan": "جاري الحفظ...",
+    "duplicate": "نسخ",
+    "copy": "نسخ",
+    "toggle": "تبديل",
+    "status": "الحالة",
+    "statusBadge": "شارة الحالة",
+    "popularBadge": "شارة الشعبية",
+    "savingsHighlight": "تسليط الضوء على التوفير",
+    "savingsCalculator": "حاسبة التوفير",
+    "customerSaves": "يوفر العميل",
+    "monthlyTotal": "شهري × 12",
+    "yearlyPrice": "السعر السنوي",
+    "priceComparison": "مقارنة الأسعار",
+    "priceStats": "إحصائيات الأسعار",
+    "featuresList": "قائمة المميزات",
+    "featuresHeader": "المميزات",
+    "featuresCount": "المميزات",
+    "whatsIncluded": "ما المتضمن",
+    "orderHelp": "الأرقام الأقل تظهر أولاً (0 = أعلى أولوية)",
+    "required": "هذا الحقل مطلوب",
+    "fillRequired": "يرجى ملء جميع الحقول المطلوبة",
+    "addOneFeature": "يرجى إضافة ميزة واحدة على الأقل",
+    "deleteConfirm": "هل أنت متأكد من حذف",
+    "createSuccess": "تم إنشاء خطة الأسعار بنجاح!",
+    "updateSuccess": "تم تحديث خطة الأسعار بنجاح!",
+    "deleteSuccess": "تم حذف خطة الأسعار بنجاح!",
+    "statusSuccess": "تم تحديث الحالة بنجاح!",
+    "activateSuccess": "تم تفعيل جميع الخطط بنجاح!",
+    "deactivateSuccess": "تم إلغاء تفعيل جميع الخطط بنجاح!",
+    "createError": "خطأ في حفظ خطة الأسعار",
+    "updateError": "خطأ في تحديث الحالة",
+    "deleteError": "خطأ في حذف خطة الأسعار",
+    "tryAgain": "يرجى المحاولة مرة أخرى",
+    "confirmActivate": "هل أنت متأكد من تفعيل جميع خطط الأسعار؟",
+    "confirmDeactivate": "هل أنت متأكد من إلغاء تفعيل جميع خطط الأسعار؟",
+    "useTemplate": "استخدام قالب ذكي",
+    "templateDesc": "ملء تلقائي بقيم محددة مسبقاً بناءً على نوع الخدمة والمستوى",
+    "templateBenefit1": "اقتراحات أسعار محددة مسبقاً",
+    "templateBenefit2": "ميزات قياسية في الصناعة",
+    "templateBenefit3": "محتوى ثنائي اللغة (EN/AR)",
+    "step1": "معلومات أساسية",
+    "step2": "الأسعار",
+    "step3": "المميزات",
+    "languageSelect": "اللغة",
+    "serviceTypeSelect": "نوع الخدمة",
+    "tierSelect": "مستوى الخطة",
+    "planName": "اسم الخطة",
+    "planDescription": "الوصف",
+    "describeSpecial": "اشرح ما يجعل هذه الخطة مميزة...",
+    "keepConcise": "اجعله مختصراً وسلط الضوء على الفوائد الرئيسية",
+    "monthlyPrice": "السعر الشهري ($)",
+    "yearlyPrice": "السعر السنوي ($)",
+    "enterPrice": "أدخل السعر",
+    "feature": "ميزة",
+    "removeFeature": "إزالة ميزة"
   },
   
   "features": {
@@ -326,6 +433,7 @@
     "active": "نشط",
     "inactive": "غير نشط",
     "toggleStatus": "تبديل الحالة",
-    "required": "هذا الحقل مطلوب"
+    "required": "هذا الحقل مطلوب",
+    "export": "تصدير"
   }
 }
