--- a/admin-panel/src/assets/i18n/en.json
+++ b/admin-panel/src/assets/i18n/en.json
@@ -115,7 +115,10 @@
   "pricing": {
     "title": "Pricing Plans",
     "subtitle": "Manage your pricing plans and packages",
+    "management": "Pricing Plans Management",
+    "manageAcross": "Manage your pricing plans across different service types and tiers",
     "add": "Add Plan",
+    "addNew": "Add New Plan",
     "edit": "Edit Plan",
     "delete": "Delete Plan",
     "name": "Plan Name",
@@ -127,16 +130,120 @@
     "features": "Features",
     "featurePlaceholder": "Enter a feature",
     "addFeature": "Add Feature",
+    "addAnotherFeature": "Add Another Feature",
     "popular": "Popular",
+    "mostPopular": "Most Popular",
     "markPopular": "Mark as Popular",
     "markActive": "Mark as Active",
     "order": "Order",
+    "displayOrder": "Display Order",
     "active": "Active",
+    "inactive": "Inactive",
     "month": "month",
     "year": "year",
+    "perMonth": "/month",
+    "perYear": "/year",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
     "save": "Save Yearly",
+    "saveWith": "Save",
+    "withYearly": "with yearly billing",
     "noPricing": "No Pricing Plans Yet",
-    "noPricingDesc": "Create your first pricing plan to get started"
+    "noPricingDesc": "Create your first pricing plan to get started",
+    "noPricingFound": "No Pricing Plans Found",
+    "noMatch": "No plans match your current filters. Try adjusting your search criteria.",
+    "getStarted": "Get started by creating your first pricing plan to offer to your customers.",
+    "websitePlans": "Website Plans",
+    "appPlans": "App Plans",
+    "packagePlans": "Package Plans",
+    "totalPlans": "Total Plans",
+    "showing": "Showing",
+    "of": "of",
+    "plans": "plans",
+    "activateAll": "Activate All",
+    "deactivateAll": "Deactivate All",
+    "serviceType": "Service Type",
+    "website": "Website",
+    "app": "App",
+    "package": "Package",
+    "websiteDev": "Website Development",
+    "appDev": "Mobile App Development",
+    "bothPackage": "Website + App Package",
+    "tier": "Tier",
+    "planTier": "Plan Tier",
+    "basic": "Basic",
+    "professional": "Professional",
+    "enterprise": "Enterprise",
+    "searchPlaceholder": "Search by name or description...",
+    "clearSearch": "Clear Search",
+    "clearFilters": "Clear Filters",
+    "clearAllFilters": "Clear All Filters",
+    "createNew": "Create New Pricing Plan",
+    "editPlan": "Edit Pricing Plan",
+    "basicInfo": "Basic Information",
+    "pricingDetails": "Pricing Details",
+    "planFeatures": "Plan Features",
+    "additionalOptions": "Additional Options",
+    "planSettings": "Plan Settings",
+    "markPopularChoice": "Mark as Popular Choice",
+    "visibleToCustomers": "Active (Visible to customers)",
+    "createPlan": "Create Plan",
+    "updatePlan": "Update Plan",
+    "savingPlan": "Saving...",
+    "duplicate": "Duplicate",
+    "copy": "Copy",
+    "toggle": "Toggle",
+    "status": "Status",
+    "statusBadge": "Status Badge",
+    "popularBadge": "Popular Badge",
+    "savingsHighlight": "Savings Highlight",
+    "savingsCalculator": "Savings Calculator",
+    "customerSaves": "Customer Saves",
+    "monthlyTotal": "Monthly × 12",
+    "yearlyPrice": "Yearly Price",
+    "priceComparison": "Price Comparison",
+    "priceStats": "Price Statistics",
+    "featuresList": "Features List",
+    "featuresHeader": "Features",
+    "featuresCount": "Features",
+    "whatsIncluded": "What's Included",
+    "orderHelp": "Lower numbers appear first (0 = highest priority)",
+    "required": "This field is required",
+    "fillRequired": "Please fill in all required fields",
+    "addOneFeature": "Please add at least one feature",
+    "deleteConfirm": "Are you sure you want to delete",
+    "createSuccess": "Pricing plan created successfully!",
+    "updateSuccess": "Pricing plan updated successfully!",
+    "deleteSuccess": "Pricing plan deleted successfully!",
+    "statusSuccess": "Status updated successfully!",
+    "activateSuccess": "All plans activated successfully!",
+    "deactivateSuccess": "All plans deactivated successfully!",
+    "createError": "Error saving pricing plan",
+    "updateError": "Error updating status",
+    "deleteError": "Error deleting pricing plan",
+    "tryAgain": "Please try again",
+    "confirmActivate": "Are you sure you want to activate all pricing plans?",
+    "confirmDeactivate": "Are you sure you want to deactivate all pricing plans?",
+    "useTemplate": "Use Smart Template",
+    "templateDesc": "Auto-fill with pre-configured values based on service type and tier",
+    "templateBenefit1": "Pre-filled pricing suggestions",
+    "templateBenefit2": "Industry-standard features",
+    "templateBenefit3": "Bilingual content (EN/AR)",
+    "step1": "Basic Info",
+    "step2": "Pricing",
+    "step3": "Features",
+    "languageSelect": "Language",
+    "serviceTypeSelect": "Service Type",
+    "tierSelect": "Plan Tier",
+    "planName": "Plan Name",
+    "planDescription": "Description",
+    "describeSpecial": "Describe what makes this plan special...",
+    "keepConcise": "Keep it concise and highlight the main benefits",
+    "monthlyPrice": "Monthly Price ($)",
+    "yearlyPrice": "Yearly Price ($)",
+    "enterPrice": "Enter price",
+    "feature": "Feature",
+    "removeFeature": "Remove Feature"
   },
   
   "features": {
@@ -322,6 +429,7 @@
     "active": "Active",
     "inactive": "Inactive",
     "toggleStatus": "Toggle Status",
-    "required": "This field is required"
+    "required": "This field is required",
+    "export": "Export"
   }
 }
